# ludwig-model-hub

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: app.py  model_hub_description.py  model_manager.py  wsgi.py
ludwig-model-hub/: app.py
test/app/: TestModelHubDescription.py  TestModelManager.py
