[tool.poetry]
name = "ludwig-model-hub"
version = "0.1.0"
description = "A model hub around ludwig models"
authors = ["ludwig_ai_dev_team"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-RESTful = "^0.3.8"
jsonify = "^0.5"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
